--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="page">
   <header class="header">
-    <img class="header__logo" src="/images/header-logo.svg" alt="Карта России">
+    <img class="header__logo" src="./images/header-logo.svg" alt="Карта России">
     <div class="header__lang-link">
       <a href="#" class="header__lang-link header__lang-link_lang_ru link">Ru</a>
       <a href="#" class="header__lang-link header__lang-link_lang_en link">En</a>
@@ -22,7 +22,7 @@
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <div>
-          <img class="lead__image" src="/images/lead-polka.jpg" alt="Псков-Улан-Удэ">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Псков-Улан-Удэ">
           <p class="lead__caption">ваша полка — верхняя</p>
         </div>
     </section>
