--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body class="body">
   <div class="page">
-  <header class="header">
-    <img class="header__logo" src="./images/header-logo.svg" alt="Карта России">
-    <div class="header__lang-link">
-      <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
-      <a href="#" class="header__lang-link link">En</a>
-    </div>
-  </header>
-  <main class="content">
+    <header class="header">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Карта России">
+      <div class="header__lang-link">
+        <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
+        <a href="#" class="header__lang-link link">En</a>
+      </div>
+    </header>
+    <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -48,14 +48,14 @@
       <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
       <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
     </section>
-    <section class="places">
+    <section class="places" aria-label="Интересные места">
       <article class="place">
         <div class="place__info">
-        <h2 class="place__title">Куршская коса</h2>
-          <div class="place__title-link">
-            <p class="place__url-heading">url</p>
-            <a target="_blank" href="http://park-kosa.ru" class="place__link link">park-kosa.ru</a>
-          </div>
+          <h2 class="place__title">Куршская коса</h2>
+            <div class="place__title-link">
+              <p class="place__url-heading">url</p>
+              <a target="_blank" href="http://park-kosa.ru" class="place__link link">park-kosa.ru</a>
+            </div>
         </div>
         <div class="place__description">
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
@@ -126,8 +126,8 @@
         <div class="place__text">
           <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.В девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
+        </div>
         </article>
-      </div>
     </section>
     <section class="cover">
       <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
