--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,32 @@
   <title>Путешествие по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
+
 <body class="body">
-  <div class="page">
-    <header class="header">
-      <img class="header__logo" src="./images/header-logo.svg" alt="Карта России">
-      <div class="header__lang-link">
-        <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
-        <a href="#" class="header__lang-link link">En</a>
-      </div>
-    </header>
-    <main class="content">
+  <header class="header">
+    <img class="header__logo" src="./images/header-logo.svg" alt="Карта России">
+    <ul class="header__lang-links">
+      <li><a href="#" class="header__lang-link header__lang-link_active link">Ru</a></li>
+      <li><a href="#" class="header__lang-link link">En</a></li>
+    </ul>
+  </header>
+  <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-          <img class="lead__image" src="./images/lead-polka.jpg" alt="Псков-Улан-Удэ">
-          <p class="lead__caption">ваша полка — верхняя</p>
+      <img class="lead__image" src="./images/lead-polka.jpg" alt="Псков-Улан-Удэ">
+      <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
-      <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
+      <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36%
+        планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом
+        деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми
+        льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта
+        и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла
+        в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч
+        километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего
+        отпуска.</p>
       <ul class="intro__list">
         <li class="intro__list-info">Часовых поясов <span class="intro__wieght">11</span></li>
         <li class="intro__list-info">Объектов природного наследия ЮНЕСКО <span class="intro__wieght">12</span></li>
@@ -52,16 +60,22 @@
       <article class="place">
         <div class="place__info">
           <h2 class="place__title">Куршская коса</h2>
-            <div class="place__title-link">
-              <p class="place__url-heading">url</p>
-              <a target="_blank" href="http://park-kosa.ru" class="place__link link">park-kosa.ru</a>
-            </div>
+          <div class="place__title-link">
+            <p class="place__url-heading">url</p>
+            <a target="_blank" href="http://park-kosa.ru" class="place__link link">park-kosa.ru</a>
+          </div>
         </div>
         <div class="place__description">
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__text">
-            <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
-            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
+            <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
+              горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн
+              Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
+            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для
+              путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка
+              России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов.
+              Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального,
+              прохладного моря.</p>
           </div>
         </div>
       </article>
@@ -70,20 +84,27 @@
           <h2 class="place__title">Кольский</h2>
           <div class="place__title-link">
             <p class="place__url-heading">url</p>
-            <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link link">National Geographic</a>
+            <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              class="place__link link">National Geographic</a>
           </div>
         </div>
         <div class="place__description">
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
-        <div class="place__text">
-          <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
-        </div>
+          <div class="place__text">
+            <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра,
+              от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
+              прикидывающийся Баренцевым морем.</p>
+            <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического
+              фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных
+              воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную
+              кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта
+              увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
+          </div>
         </div>
       </article>
       <article class="place">
         <div class="place__info">
-        <h2 class="place__title">Алтай</h2>
+          <h2 class="place__title">Алтай</h2>
           <div class="place__title-link">
             <p class="place__url-heading">url</p>
             <a target="_blank" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link link">YouTube</a>
@@ -91,15 +112,21 @@
         </div>
         <div class="place__description">
           <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
-        <div class="place__text">
-          <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
-          <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
-        </div>
+          <div class="place__text">
+            <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую
+              очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки
+              и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться
+              с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+            <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
+              вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над
+              хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже
+              обитатели Алтайского края.</p>
+          </div>
         </div>
       </article>
       <article class="place">
         <div class="place__info">
-        <h2 class="place__title">Зимний Байкал</h2>
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__title-link">
             <p class="place__url-heading">url</p>
             <a target="_blank" href="https://vk.com/baikalmile" class="place__link link">https://vk.com/baikalmile</a>
@@ -107,15 +134,20 @@
         </div>
         <div class="place__description">
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
-        <div class="place__text">
-          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
-          <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
-        </div>
+          <div class="place__text">
+            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что
+              это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
+            <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований
+              по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем
+              старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года
+              на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash;
+              197.011&nbsp;км/ч.</p>
+          </div>
         </div>
       </article>
       <article class="place">
         <div class="place__info">
-        <h2 class="place__title">Карелия</h2>
+          <h2 class="place__title">Карелия</h2>
           <div class="place__title-link">
             <p class="place__url-heading">url</p>
             <a target="_blank" href="http://vodlozero.ru" class="place__link link">http://vodlozero.ru/</a>
@@ -123,29 +155,36 @@
         </div>
         <div class="place__description">
           <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
-        <div class="place__text">
-          <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.В девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          <div class="place__text">
+            <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
+              тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
+              на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда
+              не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому
+              существу, видевшему солнце раньше, чем увидал его Иван Грозный.В девственном лесу на&nbsp;сотню
+              километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров
+              от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          </div>
         </div>
-        </div>
-        </article>
+      </article>
     </section>
     <section class="cover">
-      <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
+      <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</p>
       </a>
     </section>
-    </main>
-    <footer class="footer">
+  </main>
+  <footer class="footer">
     <nav class="footer__links">
-          <a target="_blank" href="https://yandex.ru/maps" class="footer__link link">Карты</a>
-          <a target="_blank" href="https://yandex.ru/pogoda" class="footer__link link">Погода</a>
-          <a target="_blank" href="https://rasp.yandex.ru" class="footer__link link">Расписание</a>
-          <a target="_blank" href="https://calendar.yandex.ru" class="footer__link link">Календарь</a>
-          <a target="_blank" href="https://travel.yandex.ru" class="footer__link link">Путешествия</a>
-      </nav>
-      <p class="footer__copyright">&copy;2023.Сударкин Виктор</p>
-    </footer>
-  </div>
+      <a target="_blank" href="https://yandex.ru/maps" class="footer__link link">Карты</a>
+      <a target="_blank" href="https://yandex.ru/pogoda" class="footer__link link">Погода</a>
+      <a target="_blank" href="https://rasp.yandex.ru" class="footer__link link">Расписание</a>
+      <a target="_blank" href="https://calendar.yandex.ru" class="footer__link link">Календарь</a>
+      <a target="_blank" href="https://travel.yandex.ru" class="footer__link link">Путешествия</a>
+    </nav>
+    <p class="footer__copyright">&copy;2023.Сударкин Виктор</p>
+  </footer>
 </body>
+
 </html>
