--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body class="body">
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Карта России">
-    <ul class="header__lang-links">
-      <li><a href="#" class="header__lang-link header__lang-link_active link">Ru</a></li>
-      <li><a href="#" class="header__lang-link link">En</a></li>
-    </ul>
+    <div class="header__lang-links">
+      <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
+      <a href="#" class="header__lang-link link">En</a>
+    </div>
   </header>
   <main class="content">
     <section class="lead">
